--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2799,21 +2799,21 @@ input, select, textarea {
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
 			flex-grow: 1;
-			/* overflow-y: hidden; */
+			overflow-y: hidden;
 		}
 
 			#header > nav ul {
 				list-style: none;
 				margin: 0;
 				padding: 0;
-				/* overflow-y: hidden; */
+				overflow-y: hidden;
 			}
 
 				#header > nav ul li {
 					border-top: solid 2px #87CEFA;
 					display: block;
 					padding: 0;
-					/* overflow-y: hidden; */
+					overflow-y: hidden;
 				}
 
 					#header > nav ul li a {
@@ -2824,20 +2824,20 @@ input, select, textarea {
 						border: 0;
 						color: #ffffff !important;
 						display: block;
-						padding: 0.70em 0;
+						padding: 0.75em 0;
 						text-decoration: none;
-						/* overflow-y: hidden; */
+						overflow-y: hidden;
 					}
 
 						#header > nav ul li a.active {
 							background: #fff;
 							color: #0074D9 !important;
-							/* overflow-y: hidden; */
+							overflow-y: hidden;
 						}
 
 					#header > nav ul li:first-child {
 						border-top: 0;
-						/* overflow-y: hidden; */
+						overflow-y: hidden;
 					}
 
 /* Wrapper */
